# hackathon-rust-solidjs

./: README.md
client/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
client/src/: App.tsx  index.css  index.tsx
client/src/api/: stories.json  stories.ts
client/src/components/: Card.tsx  Dialog.tsx  Editor.tsx  Link.tsx  LoginDialog.tsx  Notify.tsx  Tag.tsx
client/src/components/controls/: InputField.tsx
client/src/components/globals/: Container.tsx  LayoutPrivate.tsx  LayoutPublic.tsx  LeftBar.tsx  NavBar.tsx  RigthBar.tsx
client/src/graphql/: story.ts
client/src/middleware/: useAuth.tsx
client/src/pages/: 404.tsx  home.tsx  room.tsx  setting.tsx  write.tsx
client/src/pages/profile/: about.tsx  history.tsx  index.tsx
client/src/pages/story/: [read].tsx
client/src/types/: global.type.ts  read.type.ts  stroy.type.ts  tag.type.ts  user.type.ts
client/src/utils/: router.tsx  validation.tsx
server/: Cargo.toml  Config.toml
server/src/: main.rs
server/src/config/: db.rs  environment.rs  mod.rs
server/src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
server/src/graphql/public/: query.rs
server/src/middleware/: auth.rs  context.rs  mod.rs
server/src/models/: mod.rs  story.rs  user.rs
server/src/router/: graphql.rs  mod.rs  security.rs
server/src/types/: story.rs  user.rs
server/src/utils/: handler_jwt.rs  handler_response.rs  mod.rs
